[gd_scene load_steps=3 format=3 uid="uid://cqcu77yohkstt"]

[ext_resource type="Script" path="res://Examples/OrbitCamera/OrbitCamera.gd" id="1_vyfjb"]

[sub_resource type="SphereShape3D" id="SphereShape3D_dqrj8"]
radius = 0.1

[node name="OrbitCamera" type="Node3D"]
script = ExtResource("1_vyfjb")

[node name="CameraPivotY" type="Node3D" parent="."]

[node name="CameraPivotX" type="Node3D" parent="CameraPivotY"]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0)

[node name="SpringArm" type="SpringArm3D" parent="CameraPivotY/CameraPivotX"]
shape = SubResource("SphereShape3D_dqrj8")
spring_length = 6.0

[node name="Camera" type="Camera3D" parent="CameraPivotY/CameraPivotX/SpringArm"]
current = true
fov = 80.0
